добавлена сортировка и пагинация